<resources>
    <string name="app_name">DM Pasteleria</string>
    <string-array name="numbers">
        <item>Español</item>
        <item>English</item>
        <item>Portugués</item>
    </string-array>

    <string-array name="municipio">
        <item>Guadalupe</item>
        <item>Monterrey</item>
        <item>San Nicolás</item>
    </string-array>

    <string-array name="tipo">
        <item>Origen animal</item>
        <item>Organico</item>
        <item>Vegano</item>
        <item>Lacteo</item>
        <item>No comestible</item>
    </string-array>

    <string-array name="capas">
        <item>Fresa 39.99 $</item>
        <item>Piña 29.99 $</item>
        <item>Chocolate 39.99 $</item>
        <item>Glaseado 19.99 $</item>
        <item>Cajeta 39.99 $</item>
    </string-array>

    <string-array name="numero">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="Pan">
        <item>Chocolate</item>
        <item>Vainilla</item>
        <item>Fresa</item>
    </string-array>

    <!--Principal del menu desplegable izquierdo-->
    <string name="logo" translatable="false">Logo</string>
    <string name="idioma">Seleccionar idioma</string>
    <string name="nav_header_title" translatable="false">Repostería Express</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- Strings de Pe_admin_inicio -->
    <string name="Ajustes_del_menu">Ajustes del menu</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Cerrar_sesion">Cerrar sesion</string>

    <!-- Strings de Pe_iniciodeseion -->

    <string name="Registrarte_Como">Registrarme como…</string>
    <string name="Registrar">Registrar una cuenta</string>
    <string name="Iniciar_Como">Iniciar como…</string>
    <string name="Usuario">Usuario</string>
    <string name="Administrador">Administrador</string>
    <string name="Empleado">Empleado</string>

    <!-- Strings de Pe_admin_inventario -->
    <string name="Editar">Editar</string>
    <string name="Unidades">Unidades</string>
    <string name="Acciones">Acciones</string>
    <string name="Volver">Volver</string>
    <string name="Agregar">Agregar</string>
    <string name="Borrar">Borrar</string>

    <!--Menu desplegable izquierdo-->
    <string name="menu_home">Página Principal</string>
    <string name="menu_traditional">Pasteles Tradicionales</string>
    <string name="menu_personalized">Pasteles Personalizados</string>
    <string name="menu_other">Otros Postres</string>
    <string name="menu_help">Información y ayuda</string>

    <!--Menu desplegable derecho-->
    <string name="action_pedidos">Pedidos</string>
    <string name="action_settings">Ajustes de la cuenta</string>
    <string name="action_logout">Salir</string>

    <!-- Strings de Pe_usuario_inicio -->
    <string name="title_seasonal">Pasteles de Temporada</string>
    <string name="title_offer">Pasteles en Oferta</string>
    <string name="title_other">Otros Postres</string>
    <string name="title_otherOffer">Otros Postres en Oferta</string>
    <string name="top_advises">Anuncios importantes, ofertas, y otros anuncios de prioridad</string>
    <string name="title_Advises">Avisos importantes, ofertas especiales y avisos prioritarios</string>
    <string name="title_Products">Productos y descripciones</string>

    <!-- Strings de Pe_iniciodesesion -->
    <string name="Iniciar">INGRESAR</string>
    <string name="Residencia">Residencia</string>
    <string name="Nacimiento">Fecha de nacimiento</string>
    <string name="ICorreo">Ingrese su correo</string>
    <string name="Correo">Correo electrónico</string>
    <string name="IContraseña">Ingrese su contraseña</string>
    <string name="CContraseña">Confirme su contraseña</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Nombre">Nombre de usuario</string>
    <string name="Crear">Crear una cuenta</string>
    <string name="Ingresar">¿No tienes una cuenta? Crea una aquí</string>
    <string name="Iniciodesesion">Inicio de sesión</string>

    <!-- Strings de Pe_usuario_inicio -->
    <string name="Sucursales">Sucursales</string>
    <string name="Bievenido">Bienvenido</string>
    <string name="ProductosDestacados">Productos destacados</string>
    <string name="PastelesPredeterminados">Pasteles predeterminaddos</string>
    <string name="PastelesPersonalizados">Pasteles personalizados</string>
    <string name="Ir">Ir</string>

    <!-- Strings de Pe_usuario_inicio toolbar -->
    <string name="Toolbar1">Ajustes de la cuenta</string>
    <string name="Toolbar2">Pedidos</string>
    <string name="Toolbar3">Ayuda e informacion</string>
    <string name="Toolbar4">Idioma</string>
    <string name="Toolbar5">Cerrar sesion</string>
    <string name="Toolbar6">Pagos</string>

    <!-- Strings de Pe_admin_inicio toolbar -->
    <string name="Admin1">+ Agregar producto</string>
    <string name="Admin2">+ Agregar ingrediente</string>
    <string name="Admin3">Historial de la app</string>
    <string name="Admin4">Vista general</string>
    <string name="Admin5">+ Expandir alcance</string>
    <string name="Admin6">Gestionar inventario</string>

    <!-- Strings de Pe_admin_agregari -->
    <string name="Admin_ai1">Registrar nuevo ingrediente</string>
    <string name="Admin_ai2">Nombre del ingrediente</string>
    <string name="Admin_ai3">Tipo de ingrediente</string>
    <string name="Admin_ai4">Imagen del ingrediente</string>
    <string name="Admin_ai5">Proveedor</string>

    <string name="Admin_ai2c">Ingrese el nombre del producto</string>
    <string name="Admin_ai3c">Tipo</string>
    <string name="Admin_ai4c">No seleccionado</string>
    <string name="Admin_ai5c">Ingrese el nombre del proveedor</string>

    <!-- Strings de Pe_admin_gestionari -->
    <string name="Admin_gi1">Gestionar inventario</string>
    <string name="Admin_gi2">Nombre del producto</string>
    <string name="Admin_gi3">Imagen del producto</string>
    <string name="Admin_gi4">Cantidad de unidades</string>
    <string name="Admin_gi5">Editar unidades</string>
    <string name="UserSettingsWelcome">Ajustes de cuenta</string>
    <string name="username">Nombre de usuario</string>
    <string name="usermail">Correo de usuario</string>
    <string name="userdate">Fecha de cumpleaños</string>
    <string name="UsuarioName">Nombre de usuario</string>
    <string name="ChangeUserData" translatable="false">EDITAR</string>
    <string name="UserChangeWelcome" translatable="false">Cambiando datos</string>
    <string name="AcceptChanges" translatable="false">Aceptar</string>
    <string name="NewUsername" translatable="false">Nuevo nombre de usuario</string>
    <string name="NewUseremail" translatable="false">Nuevo correo de usuario</string>

    <!-- Strings de Pe_usuario_pasteles_personalizados -->
    <string name="Chocolate">Chocolate</string>
    <string name="Vainilla">Vainilla</string>
    <string name="PP_1">Pasteles personalizados.</string>
    <string name="PP_2">Escoge un tamaño para el pastel</string>
    <string name="PP_3">Pastel chico (1 a 2 personas) 79.99 $Mxn</string>
    <string name="PP_4">Pastel normal (3 a 4 personas)99.99 $Mxn</string>
    <string name="PP_5">Pastel grande (5 a 7 personas) 129.99 $Mxn</string>
    <string name="PP_6">Diametro de 15 centimetros</string>
    <string name="PP_7">Diametro de 19 centimetros. Condimentos + 10%</string>
    <string name="PP_8">Diametro de 26 centimetros. Condimentos + 15%</string>
    <string name="PP_9">Selecciona el tipo de pan que desea</string>
    <string name="PP_10">Seleccione alguna superficie para su pastel</string>
    <string name="PP_10_1">Almendras 29.99 $Mxn</string>
    <string name="PP_10_2">Coco rayado 19.99 $Mxn</string>
    <string name="PP_10_3">Fresas 39.99 $Mxn</string>
    <string name="PP_10_4">Trozos de chocolate 35.99 $Mxn</string>
    <string name="PP_10_5">Chispas de colores 24.99 $Mxn</string>
    <string name="PP_10_6">Ninguno</string>
    <string name="PP_11">Seleccione la cantidad de capas que desea.</string>
    <string name="PP_12">Seleccione el color de la superficie</string>
    <string name="PP_12_1">Color blanco</string>
    <string name="PP_12_2">Color verde</string>
    <string name="PP_12_3">Color amarillo</string>
    <string name="PP_12_4">Color rosa</string>
    <string name="PP_12_5">Color morado</string>
    <string name="PP_12_6">Color azul</string>
    <string name="PP_13">Agregar un texto al pastel</string>
    <string name="PP_14">Ingrese la direccion de entrega</string>
    <string name="PP_15">Verificar precio </string>
    <string name="PP_16">Agregar al carrito</string>


    <string name="Pedidos_1">Tamaño</string>
    <string name="Pedidos_2">Tamaño</string>
    <string name="Pedidos_3">Tipo de pan</string>
    <string name="Pedidos_4">Pan</string>
    <string name="Pedidos_5">Toppings</string>
    <string name="Pedidos_6">Toppings</string>
    <string name="Pedidos_7">Color del pastel</string>
    <string name="Pedidos_8">Color</string>
    <string name="Pedidos_9">Extras</string>
    <string name="Pedidos_10">Extras</string>
    <string name="Pedidos_11">Estado del pedido</string>
    <string name="Pedidos_12">Monto a pagar</string>
    <string name="Pedidos_13">Pedidos pendientes</string>
    <string name="Pedidos_14">Datos del cliente</string>
    <string name="Pedidos_15">Direccion de entrega</string>
    <string name="Pedidos_16">Cambiar estado del pedido</string>
    <string name="Pedidos_17">Bienvenido empleado</string>
    <string name="Pedidos_18">Pedidos aceptados</string>
    <string name="Pedidos_19">El pedido pasa a estado 1 y se aceptara.</string>
    <string name="Pedidos_20">Enviar el pedido</string>
    <string name="Pedidos_21">Notificar al cliente que el pedido esta listo y se esta enviando al punto de entrega</string>
    <string name="Pedidos_22">Notificar el punto de entrega</string>
    <string name="Pedidos_23">Enviar notificación al cliente de la entrega del pedido</string>
    <string name="Pedidos_24">Punto de entrega establecido</string>
    <string name="Pedidos_25">En breve se le notificara al cliente el monto a pagar</string>

    <string name="Sucursal_1">Seleccione una ubicacion de entrega</string>
    <string name="Sucursal_2">Completar pedido</string>
    <string name="Sucursal_3">Pasar a sucursal</string>
    <string name="Sucursal_4">Sucursales</string>
    <string name="Sucursal_5">Sucursal ciudad universitaria - Nuevo León - San nicólas</string>
    <string name="Sucursal_6">Sucursal ubicada al lado de la estación del metro, disponibilidad de lunes a viernes de 10:00 A.M a 7:30 P.M</string>
    <string name="Manual">Para tener un mejor entendimiento de la aplicación visite el manual de usuario proporcionado por el siguiente link:</string>


    <string name="PP_0">No seleccionado</string>
    <string name="o" translatable="false">o</string>

</resources>