<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/IconoUser"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Accion 1"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:title="@string/Toolbar1"
        android:id="@+id/Toolbar"
        android:onClick="openUserAccount"/>

    <item
        android:title="@string/Toolbar2"
        android:id="@+id/Toolbar2" />

    <item
        android:title="@string/Toolbar3"
        android:id="@+id/Toolbar3" />

    <item
        android:title="@string/Toolbar4"
        android:id="@+id/Toolbar4"
        android:onClick="showChangeLanguageDialog"/>

    <item
        android:title="@string/Toolbar5"
        android:id="@+id/Toolbar5"
        android:onClick="signOut" />

</menu>