<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_1"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTamano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_2"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_3"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvPan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_4"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_5"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvCondimentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_6"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_7"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvColores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_8"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_9"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_10"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_12"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_12"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_11"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_11"
                android:layout_marginLeft="8dp"
                android:textSize="20sp"
                />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>