<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/recurso_boton_blanco"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_14"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/tvUsuarioCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pedidos_14"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_15"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Pedidos_15"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTamano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_2"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvPan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_4"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_5"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvCondimentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_6"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_7"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/tvColores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_8"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_9"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_10"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_12"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_12"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_11"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos_11"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <Button
            android:id="@+id/tvEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:background="@drawable/recurso_boton_blanco"
            android:gravity="center"
            android:text="@string/Pedidos_16"
            android:textColor="#60443B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>