<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/recurso_boton_blanco"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_ai2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/tvProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Admin_ai2"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_ai5"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvProovedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_ai5"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_ai3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_ai3"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_gi4"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Admin_gi4"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />


        </LinearLayout>

        <Button
            android:id="@+id/tvEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:background="@drawable/recurso_boton_blanco"
            android:gravity="center"
            android:text="@string/Admin_gi5"
            android:textColor="#60443B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>